<resources>
    <string name="app_name">Admin League</string>
    <string name="action_settings">Configuración</string>
    <string name="title_activity_login">Inicio de sesión</string>

    <!-- Strings related to login -->
    <string name="prompt_user_id">Usuario de identificación</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="error_invalid_user_id">Usuario de identificación inválido</string>
    <string name="error_incorrect_password">La contraseña es incorrecta</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_server">Error en el servidor</string>
    <string name="error_incorrect_user_id">Usuario de identificación no registrado</string>
    <string name="error_network">Conexión de red no disponible</string>
    <string name="error_invalid_password">Contraseña inválida</string>
    <string name="title_activity_main">Admin League</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_user">Usuario Admin</string>
    <string name="nav_email">admin@softwareleague.com</string>
    <string name="save_action">Guardar</string>
    <string name="title_activity_gamers">GamersActivity</string>
    <string name="title_home">Activos</string>
    <string name="title_dashboard">Historicos</string>
    <string name="title_notifications">Notifications</string>
    <string name="hint_Id">Nombre del Campeonato</string>
    <string name="hint_catdamas">Categoria Damas</string>
    <string name="hint_catvarones">Categoria Varones</string>
    <string name="hint_fechaInsi">Fecha Inscripción (Inicio)</string>
    <string name="hint_fechaInsf">Fecha Inscripción (Final)</string>
    <string name="hint_fechaCami">Fecha Campeonato (Inicio)</string>
    <string name="hint_fechaCamf">Fecha Campeonato (Final)</string>
    <!-- Listado de las Categorias -->
    <string-array name="categoria">
        <item>Damas</item>
        <item>Varones</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_teams">Listado Equipos</string>
</resources>
